--- a/notifico/views/projects/templates/project_details.html
+++ b/notifico/views/projects/templates/project_details.html
@@ -6,7 +6,7 @@
   <div class="row-fluid">
     <div class="span12">
       <h2>
-        <a href="{{ url_for('.overview', u=project.owner.username) }}">{{ project.owner.username }}</a> / {{ project.name }}
+        <a href="{{ url_for('.dashboard', u=project.owner.username) }}">{{ project.owner.username }}</a> / {{ project.name }}
       </h2>
       <ul class="unstyled">
         <li>
