--- a/notifico/views/public/templates/users.html
+++ b/notifico/views/public/templates/users.html
@@ -22,7 +22,7 @@
               {% for user in pagination.items %}
               <tr>
                 <td nowrap>{{ user.joined|pretty }}</td>
-                <td style="width: 100%;"><a href="{{ url_for('projects.overview', u=user.username) }}">{{ user.username }}</a></td>
+                <td style="width: 100%;"><a href="{{ url_for('projects.dashboard', u=user.username) }}">{{ user.username }}</a></td>
                 <td style="text-align: center;">{{ user.projects.filter_by(public=True).count() }}</td>
               </tr>
               {% endfor %}
