--- a/notifico/templates/base/body.html
+++ b/notifico/templates/base/body.html
@@ -2,7 +2,7 @@
 {% if not project.public %}
 <i class="icon-lock"></i>
 {% endif %}
-<a href="{{ url_for('projects.overview', u=project.owner.username) }}">
+<a href="{{ url_for('projects.dashboard', u=project.owner.username) }}">
   {{ project.owner.username }}
 </a> / <a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">
   {{ project.name }}
@@ -58,7 +58,7 @@
             </li>
             {% if g.user %}
             <li class="{{ active('projects.') }}">
-              <a href="{{ url_for('projects.overview', u=g.user.username) }}">
+              <a href="{{ url_for('projects.dashboard', u=g.user.username) }}">
                 <i class="icon-th"></i> Projects
               </a>
             </li>
