--- a/notifico/templates/page.html
+++ b/notifico/templates/page.html
@@ -15,7 +15,7 @@
 {% endmacro %}
 
 {% macro link_p(project) %}
-<a href="{{ url_for('projects.overview', u=project.owner.username) }}">
+<a href="{{ url_for('projects.dashboard', u=project.owner.username) }}">
   {{ project.owner.username }}
 </a> / <a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">
   {{ project.name }}
