--- a/notifico/views/account/templates/tokens.html
+++ b/notifico/views/account/templates/tokens.html
@@ -8,7 +8,7 @@
         <header>
           <h2>OAuth Tokens</h2>
         </header>
-        <div class="content">
+        <div class="section-content">
           <p>OAuth tokens are used by {{ site_label }} to authenticate with 3rd party services on
             your behalf. You may delete these at any time to erase them from {{ site_label }}.
             They can simply be re-added later if you require them again.</p>
