--- a/notifico/views/admin/templates/admin_projects.html
+++ b/notifico/views/admin/templates/admin_projects.html
@@ -9,7 +9,7 @@
         <header>
           <h2>All Projects</h2>
         </header>
-        <div class="content">
+        <div class="section-content">
           <table class="table table-striped">
             <thead>
               <tr>
