--- a/notifico/views/projects/templates/delete_channel.html
+++ b/notifico/views/projects/templates/delete_channel.html
@@ -7,7 +7,7 @@
       <header>
         <h2>Delete Channel</h2>
       </header>
-      <div class="content">
+      <div class="section-content">
         <form class="form form-horizontal" method='POST' action="{{ request.url }}">
           <p>Are you sure you want to remove this channel? If you change your mind, you can always re-add it later.</p>
           <div class="form-actions">
