--- a/notifico/views/projects/templates/delete_project.html
+++ b/notifico/views/projects/templates/delete_project.html
@@ -7,7 +7,7 @@
       <header>
         <h2>Delete Project</h2>
       </header>
-      <div class="content">
+      <div class="section-content">
         <form class="form form-horizontal" method='POST' action="{{ request.url }}">
           <p>Are you sure you want to delete the project <strong>{{ project.name }}</strong>?</p>
           <div class="form-actions">
