--- a/notifico/views/projects/templates/edit_hook.html
+++ b/notifico/views/projects/templates/edit_hook.html
@@ -24,7 +24,7 @@ $(document).ready(function(){
         <header>
           <h2>Edit Hook</h2>
         </header>
-        <div class="content">
+        <div class="section-content">
           {{ service.service_description()|safe }}
           <div class="row-fluid" style="margin-top: 20px;">
             <div class="span12">
