--- a/notifico/views/projects/templates/new_hook.html
+++ b/notifico/views/projects/templates/new_hook.html
@@ -24,7 +24,7 @@ $(document).ready(function(){
         <header>
           <h2>New Hook</h2>
         </header>
-        <div class="content">
+        <div class="section-content">
           <div class="row-fluid">
             <div class="span4">
               <ul class="nav nav-list">
