--- a/notifico/views/projects/templates/new_project.html
+++ b/notifico/views/projects/templates/new_project.html
@@ -7,7 +7,7 @@
       <header>
         <h2>New Project</h2>
       </header>
-      <div class="content">
+      <div class="section-content">
         <form class="form form-horizontal" method='POST' action="{{ request.url }}">
           {{ form.hidden_tag() }}
           {{ forms.render_field(form.name) }}
