--- a/notifico/views/public/templates/channels.html
+++ b/notifico/views/public/templates/channels.html
@@ -9,7 +9,7 @@
         <header>
           <h3>Channels on {{ network }}</h3>
         </header>
-        <div class="content">
+        <div class="section-content">
           {% if False %}
           <div class="alert alert-info">
             There are no public channels for the network {{ network }}.
