--- a/notifico/views/public/templates/networks.html
+++ b/notifico/views/public/templates/networks.html
@@ -9,7 +9,7 @@
         <header>
           <h3>Networks</h3>
         </header>
-        <div class="content">
+        <div class="section-content">
           <table class="table table-striped table-vertical">
             <thead>
               <tr>
