--- a/notifico/views/public/templates/projects.html
+++ b/notifico/views/public/templates/projects.html
@@ -9,7 +9,7 @@
         <header>
           <h3>All Projects</h3>
         </header>
-        <div class="content">
+        <div class="section-content">
           <table class="table table-striped">
             <thead>
               <tr>
