--- a/notifico/views/public/templates/users.html
+++ b/notifico/views/public/templates/users.html
@@ -9,7 +9,7 @@
         <header>
           <h2>Users</h2>
         </header>
-        <div class="content">
+        <div class="section-content">
           <table class="table table-vertical table-striped">
             <thead>
               <tr>
