--- a/notifico/static/less/custom.less
+++ b/notifico/static/less/custom.less
@@ -169,3 +169,17 @@ section {
 
   }
 }
+
+ul.inline,
+ol.inline {
+  margin-left: 0;
+  list-style: none;
+}
+
+ul.inline > li,
+ol.inline > li {
+  display: inline-block;
+  *display: inline;
+  padding-right: 5px;
+  *zoom: 1;
+}
