--- a/notifico/templates/panel.html
+++ b/notifico/templates/panel.html
@@ -4,7 +4,7 @@
       {% if anchor %}<a id="{{ anchor }}"></a>{% endif %}
       <h2>{{ header }}</h2>
     </header>
-    <div class="content">
+    <div class="section-content">
       {{ caller() }}
     </div>
   </section>
