--- a/notifico/views/account/templates/login.html
+++ b/notifico/views/account/templates/login.html
@@ -8,7 +8,7 @@
         <header>
           <h2>Login</h2>
         </header>
-        <div class="content">
+        <div class="section-content">
           <form class="form form-horizontal" method='POST' action="{{ request.url }}">
             {{ form.hidden_tag() }}
             {{ forms.render_field(form.username) }}
