--- a/notifico/views/account/templates/settings.html
+++ b/notifico/views/account/templates/settings.html
@@ -8,7 +8,7 @@
                 <header>
                     <h3>Change Password</h3>
                 </header>
-                <div class="content">
+                <div class="section-content">
                     <form class="form form-horizontal" method="POST" action="{{ url_for('.settings', do='p') }}">
                         {{ password_form.hidden_tag() }}
                         {{ forms.render_field(password_form.old) }}
@@ -28,7 +28,7 @@
                 <header>
                     <h3>Delete Account</h3>
                 </header>
-                <div class="content">
+                <div class="section-content">
                     <form class="form form-horizontal" method="POST" action="{{ url_for('.settings', do='d') }}">
                         <p>Deleting your account is irreversible. All projects, hooks, and bots under your account will be <strong>purged</strong>.</p>
                         {{ delete_form.hidden_tag() }}
