--- a/notifico/views/projects/templates/delete_hook.html
+++ b/notifico/views/projects/templates/delete_hook.html
@@ -7,7 +7,7 @@
       <header>
         <h2>Delete Hook</h2>
       </header>
-      <div class="content">
+      <div class="section-content">
         <form class="form form-horizontal" method='POST' action="{{ request.url }}">
           <p>Are you sure you want to delete this hook? You will not be able to create one with the same URL, and will have to reconfigure any services you have setup to use it.</p>
           <div class="form-actions">
