--- a/notifico/views/projects/templates/project_details.html
+++ b/notifico/views/projects/templates/project_details.html
@@ -2,169 +2,165 @@
 {% import "forms.html" as forms %}
 
 {% block content %}
-<div class="container page-content">
-  <div class="row-fluid">
-    <div class="span12">
-      <h2>
-        <a href="{{ url_for('.dashboard', u=project.owner.username) }}">{{ project.owner.username }}</a> / {{ project.name }}
-      </h2>
-      <ul class="unstyled">
-        <li>
-          <i class="icon-time"></i> Created {{ project.created|pretty }}
-        </li>
-        {% if project.website %}
-        <li>
-          <i class="icon-globe"></i>
-          {{ project.website|fixlink|urlize(80, true) }}
-        </li>
-        {% endif %}
-      </ul>
-    </div>
+<div class="row">
+  <div class="span12">
+    <h2>{{ repo_link(project) }}</h2>
+    <ul class="unstyled">
+      <li>
+        <i class="icon-time"></i> Created {{ project.created|pretty }}
+      </li>
+      {% if project.website %}
+      <li>
+        <i class="icon-globe"></i>
+        {{ project.website|fixlink|urlize(80, true) }}
+      </li>
+      {% endif %}
+    </ul>
   </div>
-  {% if is_owner %}
-  <div class="row-fluid">
-    <div class="span12">
-      <section>
-        <header>
-          <div class="pull-left">
-            <a id="hooks"></a>
-            <h2>Message Hooks</h2>
-          </div>
-          <div class="pull-right">
-            {% if is_owner %}
-            <a href="{{ url_for('.new_hook', p=project.name, u=user.username) }}" class="btn btn-success">
-              Create New Hook
-            </a>
-            {% endif %}
-          </div>
-          <div style="clear: both;"></div>
-        </header>
-        <div class="content">
-          <p><em>Hooks</em> are endpoints for 3rd party services (and scripts) capable of making a HTTP POST request. Hooks receive messages, which are then formatted and forwarded to <a href="#channels">IRC channels</a>.</p>
-          {% if not project.hooks.count() %}
-          <div class="alert alert-info">
-            You haven't created any hooks yet for this project.
-          </div>
-          {% else %}
-          <table class="table table-vertical table-striped">
-            <thead>
-              <tr>
-                <th>Service Name</th>
-                <th>Hook URL</th>
-                <th>Created</th>
-                <th style="text-align: center;">Messages</th>
-                <th></th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for hook in project.hooks %}
-              <tr>
-                <td>{{ hook.hook.SERVICE_NAME }}</td>
-                <td>
-                  {% if hook.absolute_url() %}
-                  <a href="{{ hook.absolute_url() }}">
-                  {% else %}
-                  <a href="{{ url_for('.hook_receive', pid=project.id, key=hook.key) }}">
-                  {% endif %}
-                    Link
+</div>
+{% if is_owner %}
+<div class="row-fluid">
+  <div class="span12">
+    <section>
+      <header>
+        <div class="pull-left">
+          <a id="hooks"></a>
+          <h2>Message Hooks</h2>
+        </div>
+        <div class="pull-right">
+          {% if is_owner %}
+          <a href="{{ url_for('.new_hook', p=project.name, u=user.username) }}" class="btn btn-success">
+            <i class="icon-plus"></i> Create New Hook
+          </a>
+          {% endif %}
+        </div>
+        <div style="clear: both;"></div>
+      </header>
+      <div class="section-content">
+        <p><em>Hooks</em> are endpoints for 3rd party services (and scripts) capable of making a HTTP POST request. Hooks receive messages, which are then formatted and forwarded to <a href="#channels">IRC channels</a>.</p>
+        {% if not project.hooks.count() %}
+        <div class="alert alert-block">
+          You haven't created any hooks yet for this project.
+        </div>
+        {% else %}
+        <table class="table table-vertical table-striped">
+          <thead>
+            <tr>
+              <th>Service Name</th>
+              <th>Hook URL</th>
+              <th>Created</th>
+              <th style="text-align: center;">Messages</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for hook in project.hooks %}
+            <tr>
+              <td>{{ hook.hook.SERVICE_NAME }}</td>
+              <td>
+                {% if hook.absolute_url() %}
+                <a href="{{ hook.absolute_url() }}">
+                {% else %}
+                <a href="{{ url_for('.hook_receive', pid=project.id, key=hook.key) }}">
+                {% endif %}
+                  Link
+                </a>
+              </td>
+              <td>
+                {{ hook.created.strftime("%Y-%m-%d") }}
+              </td>
+              <td style="text-align: center;">
+                {{ hook.message_count }}
+              </td>
+              <td>
+                <div class="pull-right">
+                  <a href="{{ url_for('.edit_hook', p=project.name, u=user.username, hid=hook.id) }}" class="btn btn-small">
+                    <i class="icon-pencil"></i> Edit Hook
                   </a>
-                </td>
-                <td>
-                  {{ hook.created.strftime("%Y-%m-%d") }}
-                </td>
-                <td style="text-align: center;">
-                  {{ hook.message_count }}
-                </td>
-                <td>
-                  <div class="pull-right">
-                    <a href="{{ url_for('.edit_hook', p=project.name, u=user.username, hid=hook.id) }}" class="btn btn-mini">
-                      <i class="icon-pencil"></i> Edit Hook
-                    </a>
-                    <a href="{{ url_for('.delete_hook', p=project.name, u=user.username, hid=hook.id) }}" class="btn btn-mini btn-danger">
-                      <i class="icon-trash icon-white"></i> Delete
-                    </a>
-                  </div>
-                </td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-          {% endif %}
-        </div>
-      </section>
-    </div>
+                  <a href="{{ url_for('.delete_hook', p=project.name, u=user.username, hid=hook.id) }}" class="btn btn-small btn-danger">
+                    <i class="icon-trash icon-white"></i> Delete
+                  </a>
+                </div>
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+        {% endif %}
+      </div>
+    </section>
   </div>
-  {% endif %}
-  {#
-    Anyone can see what channels the project is announced to, so
-    long as they're marked public.
-  #}
-  <div class="row-fluid">
-    <div class="span12">
-      <section>
-        <header>
-          <div class="pull-left">
-            <a id="channels"></a>
-            <h2>IRC Channels</h2>
-          </div>
-          <div class="pull-right">
-            {% if is_owner %}
-            <a href="{{ url_for('.new_channel', p=project.name, u=user.username) }}" class="btn btn-success">
-              Add New Channel
-            </a>
-            {% endif %}
-          </div>
-          <div style="clear: both;"></div>
-        </header>
-        <div class="content">
-          <p>Any messages received by this project will be forwarded to any of the IRC channels that have been added to them. An operator of the channel may blacklist the project, or ban the bot from entering their channel to prevent abuse.</p>
-          {% if not visible_channels.count() %}
-          <div class="alert alert-info">
-            No public channels have been added to this project.
-          </div>
-          {% else %}
-          <table class="table table-striped table-vertical">
-            <thead>
-              <tr>
-                <th>Channel</th>
-                <th>Host</th>
-                <th>Port</th>
-                <th>SSL</th>
-                {% if is_owner %}
-                <th style="text-align: center;">Public</th>
-                <th></th>
-                {% endif %}
-              </tr>
-            </thead>
-            <tbody>
-              {% for channel in visible_channels %}
-              <tr>
-                <td>{{ channel.channel }}</td>
-                <td>{{ channel.host }}</td>
-                <td>{{ channel.port }}</td>
-                <td><i class="icon-{% if channel.ssl %}ok{% else %}remove{% endif %}"></i></td>
-                {% if is_owner %}
-                <td style="text-align: center;">
-                  <i class="icon-{% if channel.public %}ok{% else %}lock{% endif %}"></i>
-                </td>
-                <td>
-                  <div class="pull-right">
-                    <div class="pull-right">
-                    <a href="{{ url_for('.delete_channel', p=project.name, u=user.username, cid=channel.id) }}" class="btn btn-mini btn-danger">
-                      <i class="icon-trash icon-white"></i> Delete
-                    </a>
-                  </div>
-                  </div>
-                </td>
-                {% endif %}
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
+</div>
+{% endif %}
+{#
+  Anyone can see what channels the project is announced to, so
+  long as they're marked public.
+#}
+<div class="row-fluid">
+  <div class="span12">
+    <section>
+      <header>
+        <div class="pull-left">
+          <a id="channels"></a>
+          <h2>IRC Channels</h2>
+        </div>
+        <div class="pull-right">
+          {% if is_owner %}
+          <a href="{{ url_for('.new_channel', p=project.name, u=user.username) }}" class="btn btn-success">
+            <i class="icon-plus"></i> Add New Channel
+          </a>
           {% endif %}
         </div>
-      </section>
-    </div>
+        <div style="clear: both;"></div>
+      </header>
+      <div class="section-content">
+        <p>Any messages received by this project will be forwarded to any of the IRC channels that have been added to them. An operator of the channel may blacklist the project, or ban the bot from entering their channel to prevent abuse.</p>
+        {% if not visible_channels.count() %}
+        <div class="alert alert-block">
+          No public channels have been added to this project.
+        </div>
+        {% else %}
+        <table class="table table-striped table-vertical">
+          <thead>
+            <tr>
+              <th>Channel</th>
+              <th>Host</th>
+              <th>Port</th>
+              <th>SSL</th>
+              {% if is_owner %}
+              <th style="text-align: center;">Public</th>
+              <th></th>
+              {% endif %}
+            </tr>
+          </thead>
+          <tbody>
+            {% for channel in visible_channels %}
+            <tr>
+              <td>{{ channel.channel }}</td>
+              <td>{{ channel.host }}</td>
+              <td>{{ channel.port }}</td>
+              <td><i class="icon-{% if channel.ssl %}ok{% else %}remove{% endif %}"></i></td>
+              {% if is_owner %}
+              <td style="text-align: center;">
+                <i class="icon-{% if channel.public %}ok{% else %}lock{% endif %}"></i>
+              </td>
+              <td>
+                <div class="pull-right">
+                  <div class="pull-right">
+                  <a href="{{ url_for('.delete_channel', p=project.name, u=user.username, cid=channel.id) }}" class="btn btn-small btn-danger">
+                    <i class="icon-trash icon-white"></i> Delete
+                  </a>
+                </div>
+                </div>
+              </td>
+              {% endif %}
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+        {% endif %}
+      </div>
+    </section>
   </div>
 </div>
 {% endblock %}
