--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -23,7 +23,7 @@
         <header>
           <h3>Newest Projects</h3>
         </header>
-        <div class="content">
+        <div class="section-content">
           <table class="table table-striped table-vertical">
             <thead>
               <tr>
@@ -53,7 +53,7 @@
         <header>
           <h3>Top Networks</h3>
         </header>
-        <div class="content">
+        <div class="section-content">
           <table class="table table-striped table-vertical">
             <thead>
               <tr>
