base/body.html -> body.html

--- a/notifico/views/public/templates/channels.html
+++ b/notifico/views/public/templates/channels.html
@@ -1,4 +1,4 @@
-{% extends "base/body.html" %}
+{% extends "body.html" %}
 {% from "page.html" import render_pagination, link_p %}
 
 {% block content %}
