--- a/notifico/views/public/templates/events.html
+++ b/notifico/views/public/templates/events.html
@@ -1,4 +1,4 @@
-{% extends "base/body.html" %}
+{% extends "body.html" %}
 {% block content %}
 <div class="page-main-header">
     <div class="container">
