--- a/notifico/views/projects/templates/project_details.html
+++ b/notifico/views/projects/templates/project_details.html
@@ -1,5 +1,5 @@
 {% extends "body.html" %}
-{% import "forms.html" as forms %}
+{% import "ui/forms.html" as forms %}
 
 {% block content %}
 <div class="row">
