page.html -> ui/page.html

--- a/notifico/views/admin/templates/admin_projects.html
+++ b/notifico/views/admin/templates/admin_projects.html
@@ -1,5 +1,5 @@
 {% extends "body.html" %}
-{% from 'page.html' import render_pagination %}
+{% from 'ui/page.html' import render_pagination %}
 
 {% block content %}
 <div class="container">
