--- a/notifico/views/public/templates/channels.html
+++ b/notifico/views/public/templates/channels.html
@@ -1,5 +1,5 @@
 {% extends "body.html" %}
-{% from "page.html" import render_pagination, link_p %}
+{% from "ui/page.html" import render_pagination, link_p %}
 
 {% block content %}
 <div class="container page-content">
