--- a/notifico/views/public/templates/networks.html
+++ b/notifico/views/public/templates/networks.html
@@ -1,5 +1,5 @@
 {% extends "body.html" %}
-{% from 'page.html' import render_pagination %}
+{% from 'ui/page.html' import render_pagination %}
 
 {% block content %}
 <div class="container">
